--- a/style2.css
+++ b/style2.css
@@ -8,6 +8,6 @@ body{
 	background: url(intro-bg.jpg) no-repeat center center;
 }
 .signup-form {
-	color: #d3d3d3;
+	color: #a9a9a9;
 	text-align: center;
 }
