--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 	color: #fff;
 }
 body{
-	background: url(intro-bg.jpg) no-repeat center center;
+	background: url(Background Image.jpg) no-repeat center center;
 }
 .signup-form {
 	color: #a9a9a9;
