--- a/style2.css
+++ b/style2.css
@@ -8,6 +8,6 @@ body{
 	background: url(Trend color neon background002.eps) no-repeat center center;
 }
 .signup-form {
-	color: #a9a9a9;
+	color: #11C189;
 	text-align: center;
 }
