--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 	color: #fff;
 }
 body{
-	background-image: url(background.jpg);
+	background: url(background.jpg):;
 	/*background-image: url('Bakground.eps') no-repeat center center;*/
 }
 .signup-form {
