--- a/style2.css
+++ b/style2.css
@@ -5,8 +5,7 @@
 	color: #fff;
 }
 body{
-	background: url(background.jpg):;
-	/*background-image: url('Bakground.eps') no-repeat center center;*/
+	background: url(background.jpg) no-repeat center center;*/
 }
 .signup-form {
 	color: #11C189;
