--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@
 	color: #fff;
 }
 body{
-	background: url(background.jpg) no-repeat center center;
+	background: url(Background.jpg) no-repeat center center;
 }
 .signup-form {
 	color: #11C189;
