--- a/Vapor.css
+++ b/Vapor.css
@@ -8,6 +8,6 @@ body{
 	background: url(Background.jpg) no-repeat center center;
 }
 .signup-form {
-	color: #11C189;
+	color: #00000;
 	text-align: center;
 }
