--- a/Vapor.css
+++ b/Vapor.css
@@ -7,7 +7,9 @@
 body{
 	background: url(Background.jpg) no-repeat center center;
 }
+.image {image: url(VaporPlus.png) no-repeat center center;}
+
 .signup-form {
-	color: #00000;
+	color: #00AEEF;
 	text-align: center;
 }
